# avitos

./: README.md  pyproject.toml  pytest.ini
datasets/: ad.csv  category.csv  location.csv  user.csv
project/: helpers.py
project/ads/: admin.py  apps.py  helpers.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py
project/ads/management/commands/: add_new_ads.py  add_new_categories.py  csv_to_json.py  csv_to_json_ads.py
project/ads/migrations/: 0001_squashed_0002_alter_ad_image_alter_category_name.py
project/ads/urls/: ad.py  cat.py
project/ads/views/: __init__.py  ad.py  cat.py  selection.py
project/avito/: settings.py  urls.py
project/tests/: conftest.py  factories.py  fixtures.py
project/tests/ad/: ad_create_test.py  ad_detail_test.py  ad_list_test.py
project/tests/selection/: selection_create_test.py
project/users/: admin.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py
project/users/management/commands/: add_new_locations.py  add_new_users.py  csv_to_json.py  csv_to_json_users.py
project/users/migrations/: 0001_squashed_0002_alter_location_lat_alter_location_lng.py
